fix: web macOS preview - sent time overlap (on title) fix; other adjustments and improvements

--- a/src/internal/components/push/platforms/web/lockscreen/WebMacOSNotification.css
+++ b/src/internal/components/push/platforms/web/lockscreen/WebMacOSNotification.css
@@ -7,8 +7,36 @@
   border-radius: 15px;
   border: 1px solid #e4e4e4;
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
-  transition: height 0.3s ease-in-out;
+  transition: max-height 0.4s ease-in-out, overflow 0s ease-in-out 1s;
   align-self: start;
+  max-height: 113px;
+  overflow: hidden;
+}
+
+.notificare .notificare__push__web__desktop__lock-screen--collapsed {
+  animation: showOverflow 0s linear 0.4s forwards;
+}
+
+.notificare .notificare__push__web__desktop__lock-screen--expanded {
+  max-height: 500px;
+  background-color: #fff;
+}
+
+.notificare .notificare__push__web__desktop__lock-screen:hover .notificare__push__web__desktop__lock-screen__time-container {
+  opacity: 0;
+  max-width: 0;
+  transition: opacity 0.2s ease-in-out, max-width 0s linear 0.2s;
+}
+
+.notificare .notificare__push__web__desktop__lock-screen:hover .notificare__push__web__desktop__lock-screen__small-media {
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.notificare .notificare__push__web__desktop__lock-screen:hover :is(.notificare__push__web__desktop__lock-screen__settings-button-container, .notificare__push__web__desktop__lock-screen__expand-button-container) {
+  visibility: visible;
+  opacity: 1;
+  transition: opacity 0.2s;
 }
 
 /* Expand Button */
@@ -17,17 +45,25 @@
   position: absolute;
   top: 8px;
   right: 8px;
-  animation: fadeIn 0.5s ease-out forwards;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility linear 0.2s, opacity 0.2s ease-in-out;
 }
 
-/* --- MAIN CONTENT --- */
+.notificare .notificare__push__web__desktop__lock-screen__expand-button-container--visible {
+  visibility: visible;
+  opacity: 1;
+}
+
+/* MAIN CONTENT */
 
 .notificare .notificare__push__web__desktop__lock-screen__main-content {
+  position: relative;
   width: 100%;
   display: flex;
   flex-direction: row;
   column-gap: 10px;
-  padding: 14px;
+  padding: 12px;
 }
 
 /* Browser Icon */
@@ -52,10 +88,37 @@
   height: auto;
 }
 
-/* Text */
+/* Main notification content */
 
 .notificare .notificare__push__web__desktop__lock-screen__text-content {
-  width: 219px;
+  width: 100%;
+}
+
+.notificare .notificare__push__web__desktop__lock-screen__time-and-title-wrapper {
+  position: relative;
+  display: flex;
+  width: 266px;
+  overflow: hidden;
+  column-gap: 6px;
+}
+
+.notificare .notificare__push__web__desktop__lock-screen__time-container {
+  margin-left: auto;
+  flex-shrink: 0;
+  max-width: 80px;
+  transition: opacity 0.2s ease-in-out, max-width 0s linear;
+  opacity: 1;
+}
+
+.notificare .notificare__push__web__desktop__lock-screen__time-container--hidden {
+  opacity: 0;
+  max-width: 0;
+}
+
+
+.notificare .notificare__push__web__desktop__lock-screen__domain-and-message-and-media-wrapper {
+  display: flex;
+  column-gap: 6px;
 }
 
 .notificare .notificare__push__web__desktop__lock-screen__text {
@@ -77,60 +140,70 @@
 }
 
 .notificare .notificare__push__web__desktop__lock-screen__text--message {
+  margin-top: 2px;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   word-break: break-word;
   white-space: wrap;
-  margin-top: 2px;
-  -webkit-line-clamp: 3;
   line-height: 1.2;
-  transition: height 0.3s ease-in-out;
+  transition: max-height 0.4s ease 0s;
+  max-height: 50px;
+}
+
+.notificare .notificare__push__web__desktop__lock_screen__text--message-with-attachment {
+  max-width: 222px;
 }
 
 .notificare .notificare__push__web__desktop__lock-screen__text--expandable-message {
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  word-break: break-word;
-  white-space: wrap;
-  margin-top: 2px;
-  line-height: 1.2;
-  transition: height 0.3s ease-in-out;
+  max-height: 300px;
 }
 
-/* Small Media */
+.notificare .notificare__push__web__desktop__lock-screen__text--collapsed-message {
+  animation: applyClamp 0s linear 0.4s forwards;
+}
+
+.notificare .notificare__push__web__desktop__lock-screen__text--time {
+  font-size: 12px;
+  color: #64706e;
+}
+
+/* Media */
 
 .notificare .notificare__push__web__desktop__lock-screen__small-media {
-  position: absolute;
   display: flex;
-  justify-content: flex-end;
-  width: 38px;
-  height: 38px;
+  width: 35px;
+  height: 35px;
   border-radius: 25%;
   object-fit: cover;
-  animation: fadeIn 0.5s ease-out forwards;
-  right: 14px;
-  bottom: 10px;
+  transition: opacity 0.2s ease-in-out 0s;
+  margin-left: auto;
+  margin-top: 2px;
+  opacity: 1;
 }
 
-/* Expanded Media */
+.notificare .notificare__push__web__desktop__lock-screen__small-media--hidden {
+  opacity: 0;
+}
 
 .notificare .notificare__push__web__desktop__lock-screen__expanded-media {
   width: 100%;
   display: block;
 }
 
-/* Time */
+/* Expanded Content */
 
-.notificare .notificare__push__web__desktop__lock-screen__time-container {
-  position: absolute;
-  top: 8px;
-  right: 14px;
-  animation: fadeIn 0.5s ease-out forwards;
+.notificare .notificare__push__web__desktop__lock-screen__expanded-content {
+  width: 100%;
+  max-height: 0;
+  visibility: hidden;
+  transition: visibility 0s linear 0.4s, max-height 0s linear 0.4s, padding 0s linear 0.4s;
 }
 
-.notificare .notificare__push__web__desktop__lock-screen__time {
-  font-size: 12px;
-  color: #64706e;
+.notificare .notificare__push__web__desktop__lock-screen__expanded-content--visible {
+  padding: 0 14px 14px;
+  visibility: visible;
+  max-height: 500px;
+  transition-delay: 0s, 0s;
 }
 
 /* SETTINGS */
@@ -140,6 +213,20 @@
   bottom: 10px;
   right: 14px;
   z-index: 10;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out, visibility 0.2s;
+}
+
+.notificare .notificare__push__web__desktop__lock-screen__settings-button-container--visible {
+  visibility: visible;
+  opacity: 1;
+}
+
+.notificare .notificare__push__web__desktop__lock-screen__settings-button-container--hidden {
+  visibility: hidden !important;
+  opacity: 0 !important;
+  transition-delay: 0s !important;
 }
 
 /* Settings Button */
@@ -154,7 +241,6 @@
   font-size: 13px;
   justify-content: center;
   box-shadow: -5px -7px 10px 10px rgba(242, 244, 246, 1);
-  animation: fadeIn 0.5s ease-out forwards;
   position: relative;
 }
 
@@ -196,11 +282,6 @@
 
 /* Expanded Options - Actions & Settings */
 
-.notificare .notificare__push__web__desktop__lock-screen__expanded-content {
-  padding: 0 14px 14px;
-  width: 100%;
-}
-
 .notificare .notificare__push__web__desktop__lock-screen__expanded-divisor {
   border: none;
   border-top: 1px solid #d6d6d6;
@@ -230,19 +311,18 @@
   border-top: 1px solid transparent;
 }
 
-
-
 /* keyframes */
 
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
+@keyframes applyClamp {
   to {
-    opacity: 1;
+    -webkit-line-clamp: 3;
   }
 }
 
-
+@keyframes showOverflow {
+  to {
+    overflow: visible;
+  }
+}
 
 
